<resources>
    <string name="app_name">Week2Day3HomeworkListviewRecyclerView</string>
    <string name="htin_zoo_atlanta">Zoo Atlanta</string>
    <string name="hint_located_in_grant_park">Located in: Grant Park</string>
    <string name="hint_address_800_cherokee_ave_se_atlanta_ga_30315">Address: 800 Cherokee Ave SE, Atlanta, GA 30315</string>
    <string name="hint_hours">Hours: Monday - Friday, 9:30AM - 5:00PM</string>
    <string name="hint_our_animals">Our Animals</string>
    <string name="hint_text_here_itemtextview">Text Here</string>
</resources>
